--- a/GERAL/04-Flask/templates/index.html
+++ b/GERAL/04-Flask/templates/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGAR</title>
 </head>
 <body>
-    <form method="get">
+    <form action="/submit" method="GET" autocomplete="off">
         <input type="text" name="nome">
-        <button type="submit">ENVIAR</button>
+        <button >ENVIAR</button>
     </form>
+    <h1>{{ usernome }}</h1>
 </body>
 </html>
