--- a/GERAL/04-Flask/ex004-CadastroCliente/templates/listaClientes.html
+++ b/GERAL/04-Flask/ex004-CadastroCliente/templates/listaClientes.html
@@ -15,12 +15,14 @@
                 <th>ID</th>
                 <th>Nome</th>
                 <th>Idade</th>
+                <th>Ações</th>
             </tr>
             {% for p in clientes %}
                 <tr>
                     <td>{{p[0]}}</td>
                     <td>{{p[1]}}</td>
                     <td>{{p[2]}}</td>
+                    <td><a href="{{ url_for('delCadastro', buscaID=p[0]) }}">DELETAR</a></td>
                 </tr>
             {% endfor %}
         </table>
