upgrade de layout

--- a/GERAL/04-Flask/ex004-CadastroCliente/templates/index.html
+++ b/GERAL/04-Flask/ex004-CadastroCliente/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>Cadastro de clientes</h1>
-        <form action="/submit" method="post">
+        <form action="/submit" method="post" autocomplete="on">
             <input type="text" name="nome" placeholder="Nome">
             <input type="number" name="idade" placeholder="Idade">
             <button>ENVIAR</button>
