--- a/GERAL/04-Flask/ex004-CadastroCliente/static/style.css
+++ b/GERAL/04-Flask/ex004-CadastroCliente/static/style.css
@@ -1,35 +1,84 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
-    color: burlywood;
+    background-color: rgb(26, 26, 26);
+    color: rgb(224, 137, 24);
 }
 main {
-    width: 500px;
+    background-color: rgb(12, 12, 12);
+    width: 400px;
     margin: auto;
+    border-radius: 20px;
+    padding: 20px;
+}
+h1 {
+    text-align: center;
 }
 input {
     display: block;
-    background-color: grey;
+    width: 300px;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(224, 137, 24);
+    height: 30px;
+    border: none;
+    border-bottom: 1px solid grey;
 }
 button {
     display: block;
+    width: 300px;
     background-color: brown;
     color: rgb(255, 246, 240);
-    padding: 5px;
+    padding: 10px;
     border: none;
     border-radius: 5px;
-    margin: 10px;
+    margin: 10px auto;
 }
+
 a {
-    text-decoration: none;
+    display: block;
+    width: 300px;
+    text-align: center;
     background-color: rgb(0, 0, 168);
+    margin: 10px auto;
     color: rgb(189, 189, 255);
+    text-decoration: none;
     border: none;
-    padding: 5px;
+    padding: 10px 0px;
     border-radius: 5px;
-    margin: 10px;
+
 }
 
 p#status {
     color: greenyellow;
 }
+
+table#lista {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px auto;
+}
+th#nome {
+    width: 60%;
+}
+th#acoes, th#id, th#idade {
+    width: 10%;
+}
+td, th {
+    border-bottom: 1px solid rgb(63, 63, 63);
+    height: 40px;
+}
+th {
+    text-align: left;
+}
+
+a#btndel {
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(196, 23, 23);
+}
+a#btnedit {
+    width: 10px;
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(23, 135, 196);
+}
+
