admin da loja quase completo

--- a/GERAL/04-Flask/ex005-loja/templates/index.html
+++ b/GERAL/04-Flask/ex005-loja/templates/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Loja virtual</h1>
-    <a href="{{ url_for('teste')}}">LINK</a>
+    <a class="btngeral" href="../estoque.html">ESTOQUE</a>
+    <a class="btngeral" href="../cadastro.html">CADASTRAR PRODUTO</a>
     {{ resp }}
 </body>
 </html>
