app loja atualizado

--- a/GERAL/04-Flask/ex005-loja/templates/cadastro.html
+++ b/GERAL/04-Flask/ex005-loja/templates/cadastro.html
@@ -14,7 +14,7 @@
             <input type="number" step="0.1" name="preco" placeholder="Preço">
             <input type="number" name="estoque" placeholder="Estoque">
             <input type="text" name="img" placeholder="URL da imagem">
-            <input type="number" name="status" placeholder="Status">
+            <input type="text" name="categoria" placeholder="Categoria">
             <button>CADASTRAR</button>
         </form>
         <p id="resp">{{ resp }}</p>
