--- a/GERAL/04-Flask/ex005-loja/templates/estoque.html
+++ b/GERAL/04-Flask/ex005-loja/templates/estoque.html
@@ -18,7 +18,7 @@
                 <th id="idade">Preço</th>
                 <th id="">Estoque</th>
                 <th id="">Foto</th>
-                <th id="">Status</th>
+                <th id="">Categoria</th>
             </tr>
             {% for produto in produtos %}
                 <tr>
