--- a/GERAL/04-Flask/ex005-loja/templates/index.html
+++ b/GERAL/04-Flask/ex005-loja/templates/index.html
@@ -10,6 +10,7 @@
     <h1>Loja virtual</h1>
     <a class="btngeral" href="../estoque.html">ESTOQUE</a>
     <a class="btngeral" href="../cadastro.html">CADASTRAR PRODUTO</a>
+    <a class="btngeral" href="../site.html">SITE</a>
     {{ resp }}
 </body>
 </html>
