--- a/GERAL/04-Flask/ex005-loja/static/style-loja.css
+++ b/GERAL/04-Flask/ex005-loja/static/style-loja.css
@@ -25,6 +25,17 @@ div > img.imgprod {
     width: 250px;
 }
 
-p#resp {
-    color: green;
+
+a.btncomprar {
+    text-decoration: none;
+    font-weight: bold;
+    margin: 20px 0px;
+    color: #ffffff;
+    background-color: blueviolet;
+    padding: 5px;
 }
+img.destaque {
+    width: 500px;
+    
+}
+
