--- a/GERAL/04-Flask/ex005-loja/templates/produto.html
+++ b/GERAL/04-Flask/ex005-loja/templates/produto.html
@@ -3,27 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja</title>
+    <title>{{nm}}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style-loja.css') }}">
 
 </head>
 <body>
     <main>
-        <h1>Produtos</h1>
-        {% for item in produtos %}
-        <section>
-            <div><img class="imgprod" src="{{item[4]}}"></div>
-            <div>{{item[5]}}</div>
-            <div>{{item[1]}}</div>
-            <div>R$ {{item[2]}}</div>
-            <a class="btncomprar" href="{{ url_for ('pag_produto', produto_id=item[0])}}">COMPRAR</a>
+        <img class="destaque" src="{{img}}">
+        <h1>{{nome}}</h1>
+        <p>{{cat}}</p>
+        <h2>{{preco}}</h2>
+        <a class="btncomprar" href="{{ url_for('btn_comprar', id=idprod)}}">COMPRAR</a>
 
-        </section>
-        {% endfor %}
-        
     </main>
-    <a class="btngeral" href="/">Index</a>
+    <a class="btngeral" href="/site.html">Site</a>
     <a class="btngeral" href="/carrinho.html">Carrinho</a>
 </body>
 </html>
