produto zerado não aparece no site

--- a/GERAL/04-Flask/ex005-loja/templates/estoque.html
+++ b/GERAL/04-Flask/ex005-loja/templates/estoque.html
@@ -37,6 +37,11 @@
                     </td>        
                 </tr>
             {% endfor %}
+            <tr>
+                <td colspan="2">Total</td>
+                <td>R$ {{patrimonio}}</td>
+                <td>{{totalestoque}}</td>
+            </tr>
         </table>
         <a class="btngeral" href="/cadastro.html">Cadastrar produto</a>
         <a class="btngeral" href="/">Index</a>
