--- a/GERAL/04-Flask/ex005-loja/templates/carrinho.html
+++ b/GERAL/04-Flask/ex005-loja/templates/carrinho.html
@@ -19,7 +19,6 @@
                 <th class="outros">Quantidade</th>
                 <th class="outros">Foto</th>
                 <th class="outros">Categoria</th>
-                <th class="outros">Código</th>
                 <th class="outros">Ações</th>
             </tr>
             {% for p in itens %}
@@ -34,12 +33,16 @@
                         <a href="{{ url_for('aumenta_item', id=p[0])}}" class="flecha"><span class="material-symbols-outlined">chevron_right</span></a></td>
                     <td><img src="{{p[4]}}"></td>
                     <td>{{p[5]}}</td>
-                    <td>{{p[6]}}</td>
+                    
                     <td>
                         <a id="btndel" href="{{ url_for('del_produto_carrinho', id=p[0])}}"><span class="material-symbols-outlined">delete</span></a>
                     </td>        
                 </tr>
             {% endfor %}
+            <tr>
+                <td colspan="5">Total da compra:</td>
+                <td colspan="2">R$ {{total}}</td>
+            </tr>
         </table>
         <a href="{{ url_for('finalizar_compra')}}" class="btngeral">FINALIZAR COMPRA</a>
         <a class="btngeral" href="/site.html">SITE</a>
