conversor de valor monetário funcionando
utilizei Flask-babel para converter os itens. Como o BD puxa os dados em tuplas, tive que convertê-las em listas para poder manipular os valores e apresentar no template formatado de forma monetária.

--- a/GERAL/04-Flask/ex005-loja/templates/site.html
+++ b/GERAL/04-Flask/ex005-loja/templates/site.html
@@ -16,7 +16,7 @@
             <div><img class="imgprod" src="{{item[4]}}"></div>
             <div>{{item[5]}}</div>
             <div>{{item[1]}}</div>
-            <div>R$ {{item[2]}}</div>
+            <div>{{item[2]}}</div>
             <a class="btncomprar" href="{{ url_for ('pag_produto', produto_id=item[0])}}">COMPRAR</a>
 
         </section>
