botão limpar carrinho adicionado

--- a/GERAL/04-Flask/ex005-loja/static/style.css
+++ b/GERAL/04-Flask/ex005-loja/static/style.css
@@ -112,3 +112,9 @@ a.flecha {
     text-decoration: none;
     color: #ffffff;
 }
+
+a.limpa_carrinho {
+    text-decoration: none;
+    text-align: right;
+    color: red;
+}
