--- a/GERAL/04-Flask/ex005-loja/templates/carrinho.html
+++ b/GERAL/04-Flask/ex005-loja/templates/carrinho.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <h1>Carrinho de compras</h1>
+        <a class="limpa_carrinho" href="{{ url_for('del_todo_carrinho')}}"><p> <span class="material-symbols-outlined">delete_forever</span>Limpar carrinho</p></a>
         <table id="lista">
             <tr>     
                 <th class="outros">ID</th>           
