--- a/GERAL/04-Flask/ex005-loja/templates/carrinho.html
+++ b/GERAL/04-Flask/ex005-loja/templates/carrinho.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrinho</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style-loja.css') }}">
 
 </head>
 <body>
+    <header>
+        <nav class="menu">
+            <a href="/site.html">Home</a>
+        </nav>
+    </header>
     <main>
         <h1>Carrinho de compras</h1>
         <a class="limpa_carrinho" href="{{ url_for('del_todo_carrinho')}}"><p> <span class="material-symbols-outlined">delete_forever</span>Limpar carrinho</p></a>
@@ -46,7 +51,7 @@
             </tr>
         </table>
         <a href="{{ url_for('finalizar_compra')}}" class="btngeral">FINALIZAR COMPRA</a>
-        <a class="btngeral" href="/site.html">SITE</a>
+        
     </main>
     
 </body>
