nº itens no carrinho
agora o usuário consegue ver quantos itens tem no carrinho de compras, enquanto navega pelo site

--- a/GERAL/04-Flask/ex005-loja/static/style-loja.css
+++ b/GERAL/04-Flask/ex005-loja/static/style-loja.css
@@ -40,6 +40,14 @@ nav.menu > a {
     border-radius: 5px;
 }
 
+span#qtd_itenscarrinho {
+    background-color: rgb(255, 84, 84);
+    padding: 5px;
+    color: #ffffff;
+    border-radius: 5px;
+
+}
+
 div.topo {
     background-color: aliceblue;
     color: black;
