--- a/GERAL/04-Flask/ex005-loja/templates/site.html
+++ b/GERAL/04-Flask/ex005-loja/templates/site.html
@@ -20,7 +20,8 @@
     <main>
         <div class="topo">
             <p>Produtos</p>
-            <a href="/carrinho.html"><span class="material-symbols-outlined">shopping_cart</span>Carrinho</a>
+            <a href="/carrinho.html"><span class="material-symbols-outlined">shopping_cart</span>Carrinho</a><span id="qtd_itenscarrinho">{{qtd_itenscarrinho}}</span>
+
         </div>
         
         {% for item in produtos %}
