--- a/GERAL/04-Flask/ex005-loja/templates/cadastro.html
+++ b/GERAL/04-Flask/ex005-loja/templates/cadastro.html
@@ -12,7 +12,7 @@
         <form action="cadastro.html/submit" method="POST">
             <input type="text" name="nome" placeholder="Nome">
             <input type="number" step="0.1" name="preco" placeholder="Preço">
-            <input type="number" name="estoque" placeholder="Estoque">
+            <input type="number" name="estoque" step="1" pattern="\d+" title="Somente números inteiros" placeholder="Estoque">
             <input type="text" name="img" placeholder="URL da imagem">
             <input type="text" name="categoria" placeholder="Categoria">
             <button>CADASTRAR</button>
