--- a/GERAL/04-Flask/ex005-loja/static/style-loja.css
+++ b/GERAL/04-Flask/ex005-loja/static/style-loja.css
@@ -25,6 +25,7 @@ main {
     margin: auto;
     border-radius: 20px;
     padding: 20px;
+    position: relative;
 }
 
 nav {
@@ -51,9 +52,13 @@ span#qtd_itenscarrinho {
 div.topo {
     background-color: aliceblue;
     color: black;
-    text-align: right;
+    text-align: left;
 }
 
+div.topo > ul > li {
+    display: inline-block;
+    padding: 10px;
+}
 
 
 section {
@@ -153,15 +158,17 @@ a.limpa_carrinho {
 }
 a.flecha {
     text-decoration: none;
-    color: #ffffff;
+    color: var(--infosecundaria);
 }
 
 .btngeral {
     display: block;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
     width: 300px;
     text-align: center;
     background-color: rgb(0, 157, 168);
-    margin: 10px 0px;
     color: rgb(230, 230, 255);
     text-decoration: none;
     border: none;
