--- a/GERAL/04-Flask/ex005-loja/templates/editarproduto.html
+++ b/GERAL/04-Flask/ex005-loja/templates/editarproduto.html
@@ -12,7 +12,7 @@
         <p id="resp">{{ resp }}</p>
         <img id="imgprod" src="{{img}}">
         <form action="../editarproduto.html/submit" method="POST">
-            <input type="number" name="id" value="{{id}}" max="{{id}}" min="{{id}}">
+            <input type="number" name="id" value="{{id}}" max="{{id}}" min="{{id}}" required>
             <input type="text" name="nome" placeholder="Nome" value="{{nome}}">
             <input type="number" step="0.1" name="preco" placeholder="Preço" value="{{preco}}">
             <input type="number" name="estoque" placeholder="Estoque" value="{{estoque}}">
